deploy/crypto-landingpage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-landingpage
  labels:
    app: crypto-landingpage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crypto-landingpage
  template:
    metadata:
      labels:
        app: crypto-landingpage
    spec:
      containers:
        - name: crypto-landingpage
          image: YOUR_DOCKERHUB_USERNAME/crypto-landingpage:latest
          ports:
            - containerPort: 3000
          resources: {}
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10


---


apiVersion: v1
kind: Service
metadata:
  name: crypto-landingpage
spec:
  selector:
    app: crypto-landingpage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
